err.txt
In file included from /usr/include/c++/7/vector:60:0,
                 from /home/ultra/Programming/JulianneChess/Pieces/Piece.hpp:1,
                 from /home/ultra/Programming/JulianneChess/Pieces.hpp:3,
                 from /home/ultra/Programming/JulianneChess/Gameboard.hpp:1,
                 from /home/ultra/Programming/JulianneChess/Gameboard.cpp:2:
/usr/include/c++/7/bits/stl_algobase.h: In instantiation of ‘static _OI std::__copy_move<false, false, std::random_access_iterator_tag>::__copy_m(_II, _II, _OI) [with _II = const std::unique_ptr<Piece>*; _OI = std::unique_ptr<Piece>*]’:
/usr/include/c++/7/bits/stl_algobase.h:386:44:   required from ‘_OI std::__copy_move_a(_II, _II, _OI) [with bool _IsMove = false; _II = const std::unique_ptr<Piece>*; _OI = std::unique_ptr<Piece>*]’
/usr/include/c++/7/bits/stl_algobase.h:422:45:   required from ‘_OI std::__copy_move_a2(_II, _II, _OI) [with bool _IsMove = false; _II = const std::unique_ptr<Piece>*; _OI = std::unique_ptr<Piece>*]’
/usr/include/c++/7/bits/stl_algobase.h:455:8:   required from ‘_OI std::copy(_II, _II, _OI) [with _II = const std::unique_ptr<Piece>*; _OI = std::unique_ptr<Piece>*]’
/usr/include/c++/7/bits/vector.tcc:297:29:   required from ‘void std::vector<_Tp, _Alloc>::_M_assign_aux(_ForwardIterator, _ForwardIterator, std::forward_iterator_tag) [with _ForwardIterator = const std::unique_ptr<Piece>*; _Tp = std::unique_ptr<Piece>; _Alloc = std::allocator<std::unique_ptr<Piece> >]’
/usr/include/c++/7/bits/stl_vector.h:484:2:   required from ‘std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::initializer_list<_Tp>) [with _Tp = std::unique_ptr<Piece>; _Alloc = std::allocator<std::unique_ptr<Piece> >]’
/home/ultra/Programming/JulianneChess/Gameboard.cpp:45:2:   required from here
/usr/include/c++/7/bits/stl_algobase.h:324:18: error: use of deleted function ‘std::unique_ptr<_Tp, _Dp>& std::unique_ptr<_Tp, _Dp>::operator=(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = Piece; _Dp = std::default_delete<Piece>]’
        *__result = *__first;
        ~~~~~~~~~~^~~~~~~~~~
In file included from /usr/include/c++/7/memory:80:0,
                 from /home/ultra/Programming/JulianneChess/Gameboard.hpp:3,
                 from /home/ultra/Programming/JulianneChess/Gameboard.cpp:2:
/usr/include/c++/7/bits/unique_ptr.h:384:19: note: declared here
       unique_ptr& operator=(const unique_ptr&) = delete;
                   ^~~~~~~~
In file included from /usr/include/c++/7/vector:62:0,
                 from /home/ultra/Programming/JulianneChess/Pieces/Piece.hpp:1,
                 from /home/ultra/Programming/JulianneChess/Pieces.hpp:3,
                 from /home/ultra/Programming/JulianneChess/Gameboard.hpp:1,
                 from /home/ultra/Programming/JulianneChess/Gameboard.cpp:2:
/usr/include/c++/7/bits/stl_construct.h: In instantiation of ‘void std::_Construct(_T1*, _Args&& ...) [with _T1 = std::unique_ptr<Piece>; _Args = {const std::unique_ptr<Piece, std::default_delete<Piece> >&}]’:
/usr/include/c++/7/bits/stl_uninitialized.h:83:18:   required from ‘static _ForwardIterator std::__uninitialized_copy<_TrivialValueTypes>::__uninit_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = const std::unique_ptr<Piece>*; _ForwardIterator = std::unique_ptr<Piece>*; bool _TrivialValueTypes = false]’
/usr/include/c++/7/bits/stl_uninitialized.h:134:15:   required from ‘_ForwardIterator std::uninitialized_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = const std::unique_ptr<Piece>*; _ForwardIterator = std::unique_ptr<Piece>*]’
/usr/include/c++/7/bits/stl_uninitialized.h:289:37:   required from ‘_ForwardIterator std::__uninitialized_copy_a(_InputIterator, _InputIterator, _ForwardIterator, std::allocator<_Tp>&) [with _InputIterator = const std::unique_ptr<Piece>*; _ForwardIterator = std::unique_ptr<Piece>*; _Tp = std::unique_ptr<Piece>]’
/usr/include/c++/7/bits/vector.tcc:304:35:   required from ‘void std::vector<_Tp, _Alloc>::_M_assign_aux(_ForwardIterator, _ForwardIterator, std::forward_iterator_tag) [with _ForwardIterator = const std::unique_ptr<Piece>*; _Tp = std::unique_ptr<Piece>; _Alloc = std::allocator<std::unique_ptr<Piece> >]’
/usr/include/c++/7/bits/stl_vector.h:484:2:   required from ‘std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::initializer_list<_Tp>) [with _Tp = std::unique_ptr<Piece>; _Alloc = std::allocator<std::unique_ptr<Piece> >]’
/home/ultra/Programming/JulianneChess/Gameboard.cpp:45:2:   required from here
/usr/include/c++/7/bits/stl_construct.h:75:7: error: use of deleted function ‘std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = Piece; _Dp = std::default_delete<Piece>]’
     { ::new(static_cast<void*>(__p)) _T1(std::forward<_Args>(__args)...); }
       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/7/memory:80:0,
                 from /home/ultra/Programming/JulianneChess/Gameboard.hpp:3,
                 from /home/ultra/Programming/JulianneChess/Gameboard.cpp:2:
/usr/include/c++/7/bits/unique_ptr.h:383:7: note: declared here
       unique_ptr(const unique_ptr&) = delete;